--- a/container/package.json
+++ b/container/package.json
@@ -18,13 +18,21 @@
     "@babel/plugin-transform-runtime": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
+    "@eslint/compat": "^1.0.3",
+    "@eslint/js": "^9.4.0",
     "autoprefixer": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.11.0",
     "dotenv-webpack": "^8.0.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.2",
+    "globals": "^15.4.0",
     "html-webpack-plugin": "^5.3.2",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
+    "prettier": "^3.3.1",
     "style-loader": "^3.3.4",
     "tailwindcss": "^2.0.2",
     "webpack": "^5.57.1",
